# walk-the-world-backend

./: .gitignore  Cargo.toml  README.md  package.json  serverless.yml  validate_adding_steps.json
core/: Cargo.toml
core/src/: lib.rs
mocks/: insert_steps.json
pre_sign_up_check/: Cargo.toml
pre_sign_up_check/src/: main.rs
resources/: cognito-identity-pool.yml  cognito-user-pool.yml  dynamodb-table.yml
steps/: Cargo.toml
steps/src/: main.rs
total/: Cargo.toml
total/src/: main.rs
