[package]
name = "core"
version = "0.1.0"
authors = ["Rigellute <rigellute@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynomite = { version = "0.7.0", default_features = false, features = ["rustls"] }
serde = { version = "1.0.104", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
