[package]
name = "pre_sign_up_check"
version = "0.1.0"
authors = ["Rigellute <rigellute@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
simple-error = "0.2.1"
aws_lambda_events = "0.2.5"

