[package]
name = "total"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
rusoto_core = { version = "0.41.0", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.41.0", default_features = false, features = ["rustls"] }
dynomite = { version = "0.7.0", default_features = false, features = ["rustls"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
core = { path = "../core"}
simple_logger = "1.3.0"
simple-error = "0.2.1"
chrono = "0.4"
